<resources>
    <string name="app_name">Electronic_journal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ФИО">ФИО</string>
    <string name="ID_Сущности">ID Сущности</string>
    <string name="email">Email</string>
    <string name="logout_from_account">Выйти из аккаунта</string>
    <string name="administrator">Администратор</string>
    <string name="add_group">Добавить группу</string>
    <string name="name_group">Название группы</string>
    <string name="select_subjects">Выберите предметы</string>
    <string name="add">Добавить</string>
    <string name="delete_group">Удалить группу</string>
    <string name="id_and_name_group">ID и Название группы: (пусто)</string>
    <string name="id_group">ID группы</string>
    <string name="delete">Удалить</string>
    <string name="add_subjects">Добавить предмет</string>
    <string name="name_subjects">Название предмета</string>
    <string name="number_course">Номер курса (1, 2, 3 или 4)</string>
    <string name="delete_subjects">Удалить предмет</string>
    <string name="id_and_name_subjects">ID и Название предмета: (пусто)</string>
    <string name="id_subjects">ID предмета</string>
    <string name="remove_student_from_group">Удалить студента из группы</string>
    <string name="list_of_groups_ID_and_Names">Список групп: (здесь будут ID и названия)</string>
    <string name="load_students">Загрузить студентов</string>
    <string name="list_of_groups_ID_and_ФИО">Список студентов: (здесь будут ID и ФИО)</string>
    <string name="id_student">ID студента</string>
    <string name="delete_student">Удалить студента</string>
    <string name="login">Вход</string>
    <string name="password">Пароль</string>
    <string name="Login">Войти</string>
    <string name="do_not_have_an_account_register">Нет аккаунта? Зарегистрироваться</string>
    <string name="personal_data">Личные данные</string>
    <string name="registration">Регистрация</string>
    <string name="student">Студент</string>
    <string name="teacher">Преподаватель</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="available_groups">Доступные группы:</string>
    <string name="confirm_your_password">Подтвердите пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="already_have_an_account_login">Уже есть аккаунт? Войти</string>
    <string name="subject">Предмет: Математика</string>
    <string name="grade">Оценка: 5</string>
    <string name="number_group">ИКБО-01-21</string>
    <string name="full_name_student">Иванов Иван Иванович</string>
    <string name="number_id">ID: 3213213</string>
    <string name="name_of_subject">Название предмета</string>
    <string name="name_of_subject_real">Математика</string>
    <string name="gradebook">Зачетка</string>
    <string name="data">Данные</string>
    <string name="give_grade">Выставить оценки</string>
    <string name="subjects">Предметы</string>
    <string name="search_subjects">Поиск предметов...</string>
    <string name="view_groups">Группы</string>
    <string name="groups">Группы</string>
    <string name="students">Студенты</string>
    <string name="add_grade">Выставление оценки</string>
    <string name="student_and_subject">Студент: Иванов Иван Иванович\nПредмет: Математика</string>
    <string name="choose_grade">Выберите оценку</string>
    <string name="save">Сохранить</string>
    <string name="back">Назад</string>
    <string name="search">Поиск</string>
    <string name="ask_any_question">Задайте любой вопрос</string>
    <string name="ask_question_AI">Задать вопрос ИИ</string>
    <string name="enter_request">Введите запрос</string>
    <string name="date_of_birthday">Дата рождения</string>
    <string name="name_subject">Название предмета</string>
    <string name="winter_session_4">Зимняя сессия: 4</string>
    <string name="summer_session_5">Летняя сессия: 5</string>
    <string name="no_grade">Оценки нет</string>

    <string name="admin_search">Панель администратора</string>
    <string name="search_subtitle">Используйте поиск для получения информации из базы данных</string>
    <string name="search_button">Найти</string>
    <string name="search_results">Результаты поиска</string>
    <string name="copy">Копировать</string>
    <string name="share">Поделиться</string>

    <string name="subject_math">Предмет: Математика</string>
    <string name="winter_session">Зимняя сессия:</string>
    <string name="best_winter">Лучшая: Иванов Иван (5)</string>
    <string name="average_winter">Средний балл: 4.12</string>
    <string name="worst_winter">Худшая: Петров Пётр (3)</string>
    <string name="summer_session">Летняя сессия:</string>
    <string name="best_summer">Лучшая: Иванов Иван (5)</string>
    <string name="average_summer">Средний балл: 4.46</string>
    <string name="worst_summer">Худшая: Сидоров (2)</string>

    <string name="stats_header">Статистика по группе</string>
    <string name="view_stats">Посмотреть статистику</string>
    <string name="change_theme">Сменить тему</string>
</resources>