<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp"
    app:strokeColor="@color/surface_variant"
    app:strokeWidth="1dp"

    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Название предмета -->
        <TextView
            android:id="@+id/tvSubjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_subject"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface" />

        <!-- Контейнер для оценки сессий -->
        <LinearLayout
            android:id="@+id/llGrades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <!-- Оценка за зимнюю сессию -->
            <TextView
                android:id="@+id/tvWinterSession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winter_session_4"
                android:textSize="16sp"
                android:textColor="?attr/colorOnSurface" />

            <!-- Оценка за летнюю сессию -->
            <TextView
                android:id="@+id/tvSummerSession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summer_session_5"
                android:textSize="16sp"
                android:textColor="?attr/colorOnSurface" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
