<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DarkBackgroundConstraintLayout"
    android:padding="16dp"
    tools:context=".fragment.teacher.TeacherSetGradeFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_grade"
        android:textSize="26sp"
        android:textColor="@color/darkAccent"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvStudentInfo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvStudentInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/student_and_subject"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:gravity="center"
        android:lineSpacingExtra="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutGrade" />

    <!-- Поле выбора оценки -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutGrade"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/choose_grade"
        app:layout_constraintTop_toBottomOf="@id/tvStudentInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        android:layout_marginTop="16dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:drawablePadding="8dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/choose_grade" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutGrade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveGrade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ButtonOutlinedDarkAccent"
            android:layout_marginEnd="8dp"
            android:text="@string/save"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnBack"
            app:layout_constraintHorizontal_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ButtonOutlinedDarkAccent"
            android:layout_marginStart="8dp"
            android:text="@string/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSaveGrade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
