<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DarkBackgroundConstraintLayout"
    tools:context=".fragment.student.PersonalDataStudentFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/DarkScrollViewConstraint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:gravity="center_horizontal">

            <!-- Заголовок страницы -->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DarkTitle28Text"
                android:text="@string/personal_data"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:paddingVertical="16dp" />

            <!-- ImageView для фото профиля -->
            <ImageView
                android:id="@+id/ivProfilePicture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_profile_placeholder"
                android:scaleType="centerCrop"
                android:layout_marginBottom="20dp"
                android:background="@drawable/circle_background" />

            <!-- Карточка с информацией студента -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DarkCardViewStyleCorner16"
                android:layout_marginVertical="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tvStudentFullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/ФИО"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:paddingBottom="12dp" />

                    <TextView
                        android:id="@+id/tvStudentID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/ID_Сущности"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:paddingBottom="12dp" />

                    <TextView
                        android:id="@+id/tvStudentEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textSize="18sp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Кнопка выхода -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ButtonOutlinedDarkAccent"
                android:layout_marginTop="140dp"
                android:layout_gravity="center"
                app:iconGravity="textEnd"
                app:icon="@drawable/ic_logout"
                app:iconTint="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
